# quantum-curator-backend

./: DEPLOY_README.md  Dockerfile  README.md  alembic.ini  buildspec.yml  ecs-task-def.json  ecs-task-trust-policy.json  list-secrets-policy.json  pyproject.toml  secrets-policy.json
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 295707bfebd4_description_of_changes.py  4dcd2c439e15_initial_migration_create_all_tables.py  a10c5e01e782_add_uuid_for_products.py  e7243df83002_add_price_column_to_products_table.py  e8c200831c81_add_price_to_products.py
app/: main.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: product.py  search_pattern.py  user.py
app/routes/: auth.py  favorites.py  products.py  search.py
app/schemas/: product.py  search_pattern.py  user.py
app/services/: auth.py  product_generation.py
scripts/: seed_products.py
