[tool.poetry]
name = "quantum-curator-backend"
version = "0.1.0"
description = ""
authors = ["jakemeout <jacobosity+github@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
SQLAlchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"
pydantic = "^2.8.2"
python-jose = "^3.3.0"
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
